# msg_video_trimmer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  media trimmer plan.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/messagenius/msg_video_trimmer/: MsgVideoTrimmerPlugin.kt  VideoManager.kt  messages.g.kt
darwin/: msg_video_trimmer.podspec
darwin/msg_video_trimmer/: Package.swift
darwin/msg_video_trimmer/Sources/msg_video_trimmer/: MsgVideoTrimmerPlugin.swift  VideoManager.swift  messages.g.swift
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/msg_video_trimmer_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  preview_controller.dart  preview_controller_io.dart  preview_controller_web.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: msg_video_trimmer.dart
lib/src/: messages.g.dart  native_video_trimmer.dart  video_trimmer_pigeon.dart  video_trimmer_platform_interface.dart
lib/src/web/: msg_video_trimmer_web.dart  trimmer_worker.dart
pigeons/: messages.dart
test/: msg_video_trimmer_test.dart
windows/: CMakeLists.txt  messages.g.cpp  messages.g.h  msg_video_trimmer_plugin.cpp  msg_video_trimmer_plugin.h  msg_video_trimmer_plugin_c_api.cpp  video_manager.cpp  video_manager.h
windows/include/msg_video_trimmer/: msg_video_trimmer_plugin_c_api.h
